samples/_failures_safe/1761243858_0c00f6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7fed9e88.c: In function ‘main’:
./samples/SAFE/__tmp_7fed9e88.c:134:14: error: expected ‘)’ at end of input
  134 |     if (scanf
      |        ~     ^
      |              )
./samples/SAFE/__tmp_7fed9e88.c:134:5: error: expected declaration or statement at end of input
  134 |     if (scanf
      |     ^~
